Update Drone.java